# nightingale-deps

./: .gitignore  .gitmodules  DO-MSVC-BUILD.sh  MAKE-wine-links.sh  arwrapper.py  cl_wine_wrapper.py  clwrapper.py  cross-build-no-xul.sh  cross-build-xul.sh  cross-testing.sh  cygpath  cygwin-wrapper  lint-build.sh  make-cross.sh  mxe-cross-build-no-xul.sh  set-cross-vars  setup-mingw-w64.sh  setup-mxe.sh  songbird-vendor-defs.mk  songbird-vendor-rules.mk  taglibbuild.sh  vendor-defs.mk  vendor-rules.mk  xr-cross-mozbugs.txt
flac/: Makefile.ngmingw32
gettext/: 0001-Fix-Woe32-link-errors-when-compiling-with-O0.patch  Makefile.ngmingw32  Makefile.songbird  configure.ac
gettext-0.14.6/: Makefile.ngwine
gettext-win-full/: CMakeLists.txt  Makefile-nocmake.songbird  Makefile.songbird
gettext-win-full/gettext-runtime/: CMakeLists.txt
gettext-win-full/gettext-tools/: CMakeLists-full.txt  CMakeLists.bak.txt  CMakeLists.txt  config.h.bak  config.h.cmake
gettext-win-full/gettext-tools/gnulib-lib/: CMakeLists.txt  acl.h  areadlink.c  c-ctype.h  c-strcasestr.c  clean-temp.h  cloexec.h  csharpcomp.c  csharpexec.c  csharpexec.h  errno.in.h  error-progname.h  error.h  execute.c  execute.h  fcntl.in.h  fd-safer-flag.c  gl_list.h  javaexec.c  locale.in.h  malloca.h  pipe.c  pipe.h  signal.in.h  stat.c  stdarg.in.h  stdbool.in.h  stddef.in.h  stdint.in.h  stdio.in.h  stdlib.in.h  string.in.h  sys_stat.in.h  term-ostream.oo.c  time.in.h  tmpdir.c  tmpdir.h  unistd.in.h  unistr.h  vasnprintf.c  (+3 more)
gettext-win-full/gettext-tools/libgettextpo/: CMakeLists.txt  fstrcmp.c  fwriteerror.c  gettext-po.c  gettext-po.h.in  malloca.h  obstack.c  printf-parse.c  striconveh.c  striconveha.h  unistr.h  vasnprintf.c  vasprintf.c  xvasprintf.c  xvasprintf.h
gettext-win-full/gettext-tools/src/: CMakeLists.bak.txt  color.h  format-awk.c  format-boost.c  format-c.c  format-csharp.c  format-elisp.c  format-gcc-internal.c  format-gfc-internal.c  format-java.c  format-kde.c  format-librep.c  format-lisp.c  format-pascal.c  format-perl-brace.c  format-perl.c  format-php.c  format-python.c  format-qt-plural.c  format-qt.c  format-scheme.c  format-sh.c  format-tcl.c  format-ycp.c  format.c  format.h  message.h  msgl-ascii.h  msgl-equal.h  msgl-fsearch.h  msgl-iconv.h  msgmerge.c  open-catalog.c  open-catalog.h  po-charset.c  po-charset.h  po-gram-gen.c  po-gram-gen.y  po-lex.h  read-catalog-abstract.h  (+8 more)
gettext/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
gettext/build-aux/: install-reloc
gettext/gettext-runtime/: Makefile.in  aclocal.m4  configure  configure.ac
gettext/gettext-tools/: Makefile.in  aclocal.m4  configure  configure.ac
glib/: Makefile.in  Makefile.ngmingw32  Makefile.songbird  aclocal.m4  config.h.in  configure  configure.ac  glib-rand_s.patch
glib-2.16.6/: Makefile.ngmingw32  Makefile.ngwine
glib-2.32.4/: Makefile.songbird
glib/autom4te.cache/: output.1  requests  traces.0  traces.1
glib/docs/: Makefile.in
glib/gio/: Makefile.am  Makefile.in
glib/glib/: Makefile.am  Makefile.in  glib-init.c  grand.c
glib/gmodule/: Makefile.in
glib/gobject/: Makefile.in
glib/gthread/: Makefile.in
glib/m4macros/: Makefile.in
glib/tests/: Makefile.in
gst-plugins-bad/: Makefile.ngmingw32  Makefile.songbird  configure  configure.ac
gst-plugins-base/: Makefile.ngmingw32
gst-plugins-good/: Makefile.ngmingw32  configure  configure.ac
gst-plugins-ugly/: Makefile.ngmingw32
gstreamer/: Makefile.in  Makefile.ngmingw32  aclocal.m4  configure  configure.ac
gstreamer/common/: Makefile.in
gstreamer/docs/: Makefile.in
gstreamer/gst/: Makefile.in
gstreamer/libs/: Makefile.in
gstreamer/m4/: Makefile.in
gstreamer/pkgconfig/: Makefile.in
gstreamer/plugins/: Makefile.in
gstreamer/tests/: Makefile.in
gstreamer/tools/: Makefile.in
libffi/: Makefile.ngmingw32  Makefile.songbird
libffi-3.0.13/: Makefile.songbird
libgpod/: Makefile.in  Makefile.songbird  aclocal.m4  config.h.in  configure
libgpod/bindings/: Makefile.in
libgpod/docs/: Makefile.in
libgpod/m4/: Makefile.in
libgpod/src/: Makefile.in
libgpod/tests/: Makefile.in
libgpod/tools/: Makefile.in
libiconv/: Makefile.ngmingw32  Makefile.ngwine  Makefile.songbird  aclocal.m4  configure  configure.in
libiconv-1.14/: Makefile.ngwine  Makefile.songbird  configure  configure.ac  export-h-gnuc.patch
libiconv-1.14-msvcrt/: Makefile.msvc  Makefile.songbird
libiconv-1.14-msvcrt/include/: iconv.h.msvc-shared  iconv.h.msvc-static
libiconv-1.14-msvcrt/lib/: Makefile.in  Makefile.msvc
libiconv-1.14-msvcrt/src/: Makefile.in  Makefile.msvc  iconv.c
libiconv-1.14-msvcrt/srclib/: Makefile.msvc  alloca_.h  error.c  progreloc.c  safe-read.c  setenv.c
libiconv-1.14-msvcrt/windows/: iconv.rc
libiconv-1.14/build-aux/: ltmain.sh
libiconv-1.14/lib/: Makefile.in
libiconv-1.14/libcharset/: configure
libiconv-1.14/m4/: libtool.m4
libiconv-1.14/preload/: configure
libiconv-1.14/src/: Makefile.in
libiconv-1.14/srclib/: Makefile.gnulib  Makefile.in  errno.in.h  fcntl.in.h  relocatable.h  signal.in.h  stat.c  stdint.in.h  stdio.in.h  stdlib.in.h  strerror.c  strerror.h  string.in.h  sys_stat.in.h  time.in.h  unistd.in.h
libjpeg-turbo/: Makefile.ngmingw32
libogg/: Makefile.ngmingw32
libplist/: Makefile.songbird
libtheora/: Makefile.ngmingw32  Makefile.songbird
libtool/: Makefile.am  Makefile.ngwine
libvorbis/: Makefile.ngmingw32
libxml2/: Makefile.songbird
patches/: libiconv-add-relocatable-module.patch
sqlite/: Makefile.ngmingw32
taglib/: Makefile.ngmingw32  Makefile.songbird
wingetopt/: Makefile.songbird
xulrunner/: Makefile  make-xulrunner-tarball.sh  mingw-accessible-0001.patch  mingw-accessible-0001.patch.orig  mingw-accessible-0003.patch  mingw-cairo.patch  mingw-nsAccessNodeWrap.patch  mingw-nsHyperTextAccessibleWrap.patch  mingw-nsIWinAccessNode.patch  mingw-nswindow.patch  mingw-thebes.patch  mingw-xptc.patch  mingw-xr9.patch  xr_pack_deps.sh
xulrunner-1.9.2/: Makefile.songbird
zlib/: Makefile.ngmingw32  Makefile.ngmingw32.proxy
(+269 files in other folders)
